# better-yoga

./: .gitignore  README.md  README.zh-CN.md  set-version.py
cmake/: project-defaults.cmake
gentest/src/emitters/: JavascriptEmitter.ts
javascript/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
javascript/src/: wasm_bridge.c  wrapAssembly.ts
javascript/tests/: YGAlignBaselineTest.test.ts  YGComputedBorderTest.test.ts  YGComputedMarginTest.test.ts  YGComputedPaddingTest.test.ts  YGDirtiedTest.test.ts  YGErrataTest.test.ts  YGFlexBasisAuto.test.ts  YGHadOverflowTest.test.ts  YGHasNewLayout.test.ts  YGMeasureCacheTest.test.ts  YGMeasureTest.test.ts  YGNodeFreeTest.test.ts
javascript/tests/Benchmarks/: YGBenchmark.test.ts
javascript/tests/tools/: MeasureCounter.ts  utils.ts
tools/: bench-ab.sh
tools/difftest/: CMakeLists.txt  DiffTest.cpp
tools/microbench/: CMakeLists.txt  Microbench.cpp  ab.sh
tools/taffy-compare/: README.md  run-three-way.sh  run.sh  setup.sh
tools/taffy-compare/patches/: 01-build-lto.patch  02-gap-getter-ygvalue.patch  03-yunit-keywords.patch
website/: package.json
website/docs/getting-started/: configuring-yoga.mdx  laying-out-a-tree.mdx
website/src/components/: FlexStyle.ts  YogaViewer.tsx
yoga/algorithm/: Cache.cpp  Cache.h  CalculateLayout.cpp
yoga/node/: LayoutResults.cpp  LayoutResults.h
yoga/style/: Style.h
